@@ -284,7 +284,8 @@ MysqlIO.21=\ Only one streaming result set may be open and in use per-connection
 MysqlIO.22=\ any active result sets before attempting more queries.
 MysqlIO.23=Can not use streaming results with multiple result statements
 MysqlIO.25=\ ... (truncated)
-MysqlIO.SlowQuery=Slow query (exceeded {0} {1}, duration: {2} {1}): 
+MysqlIO.SlowQuery=Slow query (exceeded {0} {1}, duration: {2} {1}):
+MysqlIO.ServerSlowQuery=The server processing the query has indicated that the query was marked "slow". 
 Nanoseconds=ns
 Milliseconds=ms
 MysqlIO.28=Not issuing EXPLAIN for query of size > 
